<resources>
    <string name="about_message">
        <![CDATA[
        <p><big>  MedsStockTracker v2.2.0  </big></p>
        <p>       Build: 20210223.1   </p>
        <p>       Database: v%d   </p>
        <p>       &copy; Copyright &nbsp - &nbsp Lior Hass   </p>
        ]]>
    </string>
    <string name="app_name">MedsStockTracker</string>
    <string name="first_run_msg">
        <![CDATA[
        <H3>Welcome</H3>
        Please read the following important message from the app’s developer before you continue to use MedsStockTracker:
        <p> <big><b>MedsStockTracker is just a convenience tool. It should never be used as a primary tool to manage critical medicine supply.
            Never rely on it to remind you to restock critical medicines.</b></big></p>
        <p> MedsStockTracker is developed and maintained by just one person in my free time.
            This app is open source and free. It does not contain ads or any other monetization mechanism.
            As a result, it does not go through typical software quality assurance procedures and might crash,
            suffer data loss, miss alerts, or malfunction in other ways.</p>
        <p> By clicking the “I accept” button you assert that you understand this,
            and that you are going to use the app only as a convenience tool.
            If you do not accept, please click the "Decline" button, and simply uninstall the app.</p>
        ]]>
    </string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="never">Never</string>
    <string name="add">Add</string>
    <string name="i_accept">I Accept</string>
    <string name="decline">Decline</string>
    <plurals name="items_selected">
        <item quantity="one">%d  \u00A0Item selected</item>
        <item quantity="other">%d  \u00A0Items selected</item>
    </plurals>
    <string name="remaining_stock_concise_msg">%1$s pills;\u00A0\u00A0%2$d days</string>
    <string name="remaining_stock_concise_msg_no_days">%1$s pills</string>
    <string name="low_stock_notification">%1$s (%2$d days left)</string>
    <string name="today">today</string>
    <string name="tomorrow">tomorrow</string>
    <string name="yesterday">yesterday</string>
    <string name="days_ago">%1$d days ago</string>
    <string name="in_days">in %1$d days</string>
    <string name="nav_drawer_title_medicine_list">Medicine List</string>
    <string name="nav_drawer_title_updates_log">Updates History</string>
    <string name="nav_drawer_title_settings">Settings</string>
    <string name="nav_drawer_title_help">Help</string>
    <string name="nav_drawer_title_privacy">Privacy</string>
    <string name="nav_drawer_title_about">About</string>
    <string name="fragment_title_medicines">Medicines</string>
    <string name="fragment_title_settings">Settings</string>
    <string name="fragment_title_edit_medicine">Edit Medicine</string>
    <string name="fragment_title_new_medicine">New Medicine</string>
    <string name="fragment_title_events">Events</string>
    <string name="fragment_title_about">About</string>
    <string name="fragment_title_help">Help</string>
    <string name="fragment_title_privacy">Privacy</string>
    <string name="notification_title_for_warning">Meds inventory is running low</string>
    <string name="notification_title_for_critical">Meds inventory is running CRITICALLY low</string>
    <string name="notification_warn_meds_list_title">Restocking is needed for:</string>
    <string name="notification_critical_meds_list_title">Urgent restocking is needed for:</string>
    <string name="pref_not_set">Not set</string>
    <string name="pref_meds_stock_critical_threshold_key">medsStockThresholdCriticalKey</string>
    <string name="pref_meds_stock_threshold_critical_title">Critical stock threshold (in days)</string>
    <plurals name="pref_meds_stock_threshold_critical_summary">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <string name="pref_meds_stock_threshold_critical_dialog_title">Critical threshold</string>
    <string name="pref_meds_stock_threshold_critical_dialog_msg">Set the number of days that is considered critical</string>
    <string name="pref_meds_stock_critical_threshold_default_value">5</string>
    <string name="pref_meds_stock_warning_threshold_key">medsStockThresholdWarningKey</string>
    <string name="pref_meds_stock_threshold_warning_title">Warning stock threshold (in days)</string>
    <plurals name="pref_meds_stock_threshold_warning_summary">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <string name="pref_meds_stock_threshold_warning_dialog_title">Warning threshold</string>
    <string name="pref_meds_stock_threshold_warning_dialog_msg">Set the minimal number of days that is considered OK</string>
    <string name="pref_meds_stock_warning_threshold_default_value">14</string>
    <string name="pref_notifications_category_title">Notifications</string>
    <string name="pref_notifications_category_key">NotificationsCategoryKey</string>
    <string name="pref_notifications_key">notificationsKey</string>
    <string name="pref_notifications">Notifications settings</string>
    <string name="pref_notifications_enabled_summary">Notifications are enabled.</string>
    <string name="pref_notifications_disabled_summary">Notifications are disabled.</string>
    <string name="pref_enable_notifications_key">enableNotificationsKey</string>
    <string name="pref_enable_notifications">Enable Notifications</string>
    <string name="pref_enable_notifications_summary">When checked, you will get notifications of low inventories.</string>
    <string name="pref_notifications_time_key2">notificationsTimeKey</string>
    <string name="pref_notifications_time_key">notificationsTimeKey</string>
    <string name="pref_notifications_time_title">Earliest time for notifications (in the day)</string>
    <string name="pref_notifications_time_summary">Notifications won\'t be set before %s</string>
    <string name="pref_notifications_time_dialog_title">Set the earliest time for notifications</string>
    <string name="pref_notifications_ringtone_key">notificationsRingtoneKey</string>
    <string name="pref_notifications_ringtone_summary">Choose a notification ringtone</string>
    <string name="pref_notifications_ringtone_title">Notification ringtone</string>
    <string name="pref_notifications_vibrate_key">notificationsVibrateKey</string>
    <string name="pref_notifications_vibrate_title">Vibrate</string>
    <string name="pref_notifications_vibrate_summary">Vibrate when a notification is displayed</string>
    <string name="pref_notifications_led_key">notificationsLedKey</string>
    <string name="pref_notifications_led_title">Blink LED</string>
    <string name="pref_notifications_led_summary">If set, use notification LED</string>
    <string name="pref_medicine_sort_key">medsSortKey</string>
    <string name="pref_events_sort_key">eventsSortKey</string>
    <string name="daily_usage">Daily usage:</string>
    <string name="current_stock">Current stock:</string>
    <string name="will_run_out_at">Will run out at:</string>
    <string name="last_updated_at">Last updated:</string>
    <string name="notes">Notes:</string>
    <string name="medicine_name">Medicine name</string>
    <string name="daily_dose">Daily dosage (in pills)</string>
    <string name="current_stock_pills">Current stock (in pills)</string>
    <string name="empty_medicine_list_message">
        <![CDATA[
        <P><BIG>There are no medicines defined.</BIG></P>
        <P>To start using the app, add a medicine by pressing the plus button at the bottom.</P>
        ]]>
    </string>
    <string name="delete_medicine_confirmation_dialog_title">Delete Medicines</string>
    <plurals name="delete_medicine_confirmation_dialog_msg">
        <item quantity="one">Are you sure you want to delete this medicine?\nThis cannot be undone.</item>
        <item quantity="other">Are you sure you want to delete these %d medicines?\nThis cannot be undone.</item>
    </plurals>
    <string name="delete_event_confirmation_dialog_title">Delete Logged Events</string>
    <plurals name="delete_event_confirmation_dialog_msg">
        <item quantity="one">Are you sure you want to delete this logged event?\nThis cannot be undone.</item>
        <item quantity="other">Are you sure you want to delete these %d logged events?\nThis cannot be undone.</item>
    </plurals>
    <string name="logged_event_new_med">New Medicine: %1$s. Daily dose: %2$.1f. Available stock: %3$.1f. Notes: %4$s</string>
    <string name="logged_event_name_changed">Medicine name changed from %1$s to %2$s.</string>
    <string name="logged_event_daily_dose_changed">Daily dose changed from %1$.1f to %2$.1f. </string>
    <string name="logged_event_current_stock_changed">Current stock changed from %1$.1f to %2$.1f.</string>
    <string name="logged_event_notes_changed">Notes changed from \'%1$s\' to \'%2$s\'.</string>
    <string name="logged_event_medicine_deleted">Deleted.</string>
    <string name="logged_event_imported_med">Imported Medicine: %1$s. Daily dose: %2$.1f. Available stock: %3$.1f. Updated at: %4$s.</string>
    <string name="critical_notifications_channel_name">Critically low stock medicines</string>
    <string name="critical_notifications_channel_description">Notifications about medicines\' stocks that are running CRITICALLY low</string>
    <string name="warning_notifications_channel_name">Low stock medicines</string>
    <string name="warning_notifications_channel_description">Notifications about medicines\' stocks that are running low</string>
    <string name="pref_theme_key">pref_theme_key</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_theme_light_label">Light</string>
    <string name="pref_theme_dark_label">Dark</string>
    <string name="pref_theme_auto_label">Auto</string>
    <string name="pref_theme_light_value">thm_lt</string>
    <string name="pref_theme_dark_value">thm_drk</string>
    <string name="pref_theme_auto_value">thm_oto</string>
    <string name="sort">Sort</string>
    <string name="sort_by_urgency">Sort by urgency</string>
    <string name="sort_alphabetically">Sort alphabetically</string>
    <string name="help_file_url">file:///android_asset/help-en.html</string>
    <string name="privacy_file_url">file:///android_asset/privacy-en.html</string>
    <string name="err_msg_invalid_medicine_name">Invalid medicine name</string>
    <string name="err_msg_duplicate_medicine_name">Name already exists</string>
    <string name="err_msg_daily_dose">Daily Dose must be a valid number</string>
    <string name="err_msg_current_stock">Current Stock must be a valid number</string>
    <string name="help">Help</string>
    <string name="help_dialog_medicine_name_title">Medicine Name</string>
    <string name="help_dialog_medicine_name_msg">You can call a medicine however you like. A medicine name can contain letters, numbers and even special characters like -, + @, #, etc. Try to keep it relatively short though (up to 20 characters), so it will feet nicely into screen.</string>
    <string name="help_dialog_btn">Got it</string>
    <string name="help_dialog_daily_dose_title">Daily Dosage</string>
    <string name="help_dialog_daily_dose_msg">The average number of pills you take per day. It is OK to specify a fraction of a pill. For example, if you take one pill four days a week, specify 0.57 as your daily dosage (which is 4/7). If you enter a fraction, don\'t bother to specify more than two decimals.</string>
    <string name="help_dialog_current_stock_title">Current Stock</string>
    <string name="add_to_current_stock">Add to Stock</string>
    <string name="quantity_to_add">Quantity to add</string>
</resources>