<?xml version="1.0" encoding="utf-8"?>
<!-- https://developer.android.com/guide/topics/ui/menus.html#xml
     https://developer.android.com/guide/topics/resources/menu-resource  -->

<!-- Note: Item IDs here must match the IDs of destinations in the navigation graph so the
     navigation actions could be generated automatically -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/medicineListFragment"
            android:icon="@drawable/ic_list_24dp"
            android:title="@string/nav_drawer_title_medicine_list"/>
        <item
            android:id="@+id/eventListFragment"
            android:icon="@drawable/ic_assignment_24dp"
            android:title="@string/nav_drawer_title_updates_log"/>
    </group>

    <!-- The id for the group is needed only because Android draws a separator line between groups only if they have an id. sigh... -->
    <group android:checkableBehavior="single" android:id="@+id/misc">
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/nav_drawer_title_settings"/>
        <item
            android:id="@+id/helpFragment"
            android:icon="@drawable/ic_help_outline_24dp"
            android:title="@string/nav_drawer_title_help"/>
        <item
            android:id="@+id/privacyFragment"
            android:icon="@drawable/ic_lock_outline_24dp"
            android:title="@string/nav_drawer_title_privacy"/>
        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/ic_info_outline_24dp"
            android:title="@string/nav_drawer_title_about"/>
    </group>

</menu>
