<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.liorhass.android.medsstocktracker.editmedicine.EditMedicineViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/dialogAddToMedicineStock"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:padding="16dp">

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_current_stock"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userInputLayout"
            style="@style/MST.TextInputLayout"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:hint="@string/quantity_to_add"
            app:layout_constraintTop_toBottomOf="@id/dialogTitle"
            app:layout_constraintStart_toStartOf="parent"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonOk"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="@{(v) -> viewModel.onAddToCurrentStock(userInput.getText().toString())}"
            android:text="@string/add"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/userInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/buttonCancel"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="@{(v) -> viewModel.onCancelAddToCurrentStock()}"
            android:text="@string/cancel"
            app:layout_constraintBaseline_toBaselineOf="@id/buttonOk"
            app:layout_constraintEnd_toStartOf="@id/buttonOk"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>